# BigCodeBench-X

./: README.md  cspell.config.yaml
.github/workflows/: benchmark.yml
bigcodebench_multipl/: README.md  pyproject.toml
bigcodebench_multipl/src/: apply_exec_filter.py  bcb_multipl_util.py  bcb_reader.py  completions.py  dspy_util.py  make_exampleIO_problem.py  make_pl_agnostic_problem.py  make_stdio_problem.py  retries_exampleIO_problem.py
bigcodebench_multipl/src/bigcodebench_multipl/: __init__.py  run_benchmark.py  stdio_problem_inspector.py
containers/java/: Dockerfile  Makefile  TryInstallDependencies.java  driver.py  entrypoint.py  find_libraries.py  job.sh  libs.txt  pom_template.xml  test_container.py
containers/jl/: Dockerfile  Makefile  README.md  driver.py  entrypoint.py  find_libraries.py  job.sh  script.sh  try_install_packages.jl
containers/js/: Dockerfile  Makefile  README.md  driver.py  entrypoint.py  fixup_js.py  inspect_errors.py  job.sh  libs.txt  test_container.py  try_npm_install.sh
containers/py/: .gitignore  Dockerfile  Makefile  driver.py  entrypoint.py  job.sh  post_install.sh  requirements.txt  stdio_bcb.def  test_container.py
containers/r/: Dockerfile  Makefile  README.md  driver.py  entrypoint.py  install_packages.R  job.sh  libs.txt  test_container.py
containers/ts/: Dockerfile  driver.py  entrypoint.py
