[project]
name = "bigcodebench-multipl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Arjun Guha", email = "a.guha@northeastern.edu" }
]
requires-python = ">=3.10"
dependencies = [
    "datasets>=3.6.0",
    "dspy>=2.6.23",
    "gradio>=5.33.0",
]

[project.scripts]
bigcodebench-multipl = "bigcodebench_multipl:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pytest>=8.3.5",
    "ruff>=0.11.12",
]
